[gd_scene load_steps=4 format=3 uid="uid://c8x8pupk2jfer"]

[ext_resource type="PackedScene" uid="uid://ctj8a1spf6tn8" path="res://Scenes/Turrets/turret_container.tscn" id="1_q5k1n"]
[ext_resource type="Script" path="res://Scenes/Turrets/Spore Sprayer/spore_sprayer_container.gd" id="2_fjyph"]
[ext_resource type="PackedScene" uid="uid://d2hy41i8uole7" path="res://Models/Turrets/Spore Sprayer/spore_sprayer.tscn" id="2_lo2lb"]

[node name="SporeSprayerContainer" instance=ExtResource("1_q5k1n")]
script = ExtResource("2_fjyph")

[node name="SporeSprayer" parent="." index="0" instance=ExtResource("2_lo2lb")]

[connection signal="area_entered" from="SporeSprayer" to="." method="_on_spore_sprayer_area_entered"]
[connection signal="area_exited" from="SporeSprayer" to="." method="_on_spore_sprayer_area_exited"]
[connection signal="state_processing" from="StateChart/CompoundState/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_processing" from="StateChart/CompoundState/Acquiring" to="." method="_on_acquiring_state_processing"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
